<resources>
    <string name="app_name">Weather</string>
    <string name="tbilisi">Tbilisi</string>
    <string name="feels_like">Feels like</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="date">date</string>
    <string name="search_places">Search places</string>
    <string name="city">city</string>
    <string name="description">description</string>
    <string name="temp">15.C</string>
    <string name="celsius_with_args">%1$s °C</string>
    <string name="pressure_with_args">%1$d mBar</string>
    <string name="humidity_with_args">%1$d %2$s</string>
    <string name="speed_with_args">%1$s km/h</string>
    <string name="feelsLike_celsius">Feels like: %1$s °C</string>
    <string name="icon">icon</string>
    <string name="current">Current</string>
    <string name="five_days">5 days</string>
</resources>
